--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A todo list app",
   "main": "src/script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "PORT=8080 live-server ."
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/mnubhan/to-do-list-app#readme",
   "devDependencies": {
-    "eslint": "^8.51.0"
+    "eslint": "^8.51.0",
+    "live-server": "^1.2.2"
   }
 }
